--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <img src="images/Icons/airpods-icon.png">
                 </a>
             </div>
-            <p class="copyright">Made with &hearts;git by Sachin Kumar</p>
+            <p class="copyright">Made with &hearts; by Sachin Kumar</p>
         </section>
         <!-- End of Section 6 -->
     </div>
